{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 17,
  "lineage": "fa601450-37b7-b473-62f5-c1bedb9440d4",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "infra_natgw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f80dcd5fc08fc8da",
            "domain": "vpc",
            "id": "eipalloc-0f80dcd5fc08fc8da",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-23-162-227.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.162.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935501273130:internet-gateway/igw-002f8fb3666b44e31",
            "id": "igw-002f8fb3666b44e31",
            "owner_id": "935501273130",
            "tags": {
              "Name": "ogata",
              "kubernetes.io/cluster/ogata-infra": "owned"
            },
            "tags_all": {
              "Name": "ogata",
              "kubernetes.io/cluster/ogata-infra": "owned"
            },
            "vpc_id": "vpc-0ba11ff0c5b6a4997"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f80dcd5fc08fc8da",
            "connectivity_type": "public",
            "id": "nat-03a9e6305362b6b99",
            "network_interface_id": "eni-0112aa64380b7840d",
            "private_ip": "10.0.4.87",
            "public_ip": "3.23.162.227",
            "subnet_id": "subnet-0b483025d43aac49a"
          },
          "dependencies": [
            "module.vpc.aws_eip.infra_natgw_eip",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "infra_private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-062f92f6d47ac621f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03a9e6305362b6b99",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062f92f6d47ac621f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.infra_natgw_eip",
            "module.vpc.aws_nat_gateway.infra",
            "module.vpc.aws_route_table.infra_private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "infra_public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-002f8fb3666b44e31",
            "id": "r-rtb-0e8c506dc8ff400421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8c506dc8ff40042",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.infra",
            "module.vpc.aws_vpc.infra"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "infra_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935501273130:route-table/rtb-062f92f6d47ac621f",
            "id": "rtb-062f92f6d47ac621f",
            "owner_id": "935501273130",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ogata private"
            },
            "tags_all": {
              "Name": "ogata private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba11ff0c5b6a4997"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.infra"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "infra_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00738f58adabaf35d",
            "route_table_id": "rtb-062f92f6d47ac621f",
            "subnet_id": "subnet-063a7e1a22f5a6719"
          },
          "dependencies": [
            "module.vpc.aws_route_table.infra_private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccfb46a076d9713e",
            "route_table_id": "rtb-062f92f6d47ac621f",
            "subnet_id": "subnet-0c0207bf0c2043dac"
          },
          "dependencies": [
            "module.vpc.aws_route_table.infra_private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c806bc03a4d37e2",
            "route_table_id": "rtb-062f92f6d47ac621f",
            "subnet_id": "subnet-0a7da5b66a251fa07"
          },
          "dependencies": [
            "module.vpc.aws_route_table.infra_private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935501273130:subnet/subnet-063a7e1a22f5a6719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063a7e1a22f5a6719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "935501273130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogata private #0",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ogata private #0",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ba11ff0c5b6a4997"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935501273130:subnet/subnet-0c0207bf0c2043dac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0207bf0c2043dac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "935501273130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogata private #1",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ogata private #1",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ba11ff0c5b6a4997"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935501273130:subnet/subnet-0a7da5b66a251fa07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7da5b66a251fa07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "935501273130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogata private #2",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ogata private #2",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ba11ff0c5b6a4997"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935501273130:subnet/subnet-0b483025d43aac49a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b483025d43aac49a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935501273130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogata public #0",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ogata public #0",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ba11ff0c5b6a4997"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935501273130:subnet/subnet-0342c9ab4ea041097",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0342c9ab4ea041097",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935501273130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogata public #1",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ogata public #1",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ba11ff0c5b6a4997"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935501273130:subnet/subnet-0547c81eb7d406f9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0547c81eb7d406f9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935501273130",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ogata public #2",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ogata public #2",
              "kubernetes.io/cluster/ogata-infra": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ba11ff0c5b6a4997"
          },
          "dependencies": [
            "module.vpc.aws_vpc.infra",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:935501273130:vpc/vpc-0ba11ff0c5b6a4997",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f3539f0619811d4",
            "default_route_table_id": "rtb-0e8c506dc8ff40042",
            "default_security_group_id": "sg-0f07a13edbb435bb6",
            "dhcp_options_id": "dopt-0e2eda231a9fe37aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba11ff0c5b6a4997",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8c506dc8ff40042",
            "owner_id": "935501273130",
            "tags": {
              "Name": "ogata"
            },
            "tags_all": {
              "Name": "ogata"
            }
          }
        }
      ]
    }
  ]
}